2006-09-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_maxdegree) : added
	* examples/simple/igraph_degree.c : updated to test igraph_maxdegree

2006-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) : rewritten to
	eliminate invalid read (& sometimes segfault on windows)

2006-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) : serious memory
	leaks eliminated

	* src/foreign-graphml.c (igraph_i_graphml_sax_handler_error)
	(igraph_i_graphml_destroy_state) : some memory leaks eliminated

	* src/interfaces/python/graphobject.c (igraphmodule_Graph_delete_edges)
	: memory leak eliminated

	* src/igraph_psumtree.c (igraph_i_log2) : added
	(igraph_psumtree_init) : igraph_i_log2 instead of log2 

2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_write_graph_graphml) : 
	added attribute handling

2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_create) : error message if 'number' 
	is out of range

	* examples/simple/graphml.c : updated

	* src/foreign-graphml.c (igraph_i_graphml_parser_state)
	(igraph_i_graphml_destroy_state)
	(igraph_i_graphml_sax_handler_start_element)
	(igraph_i_graphml_sax_handler_end_document)
	(igraph_i_graphml_sax_handler_start_document) : added edgeids
	(igraph_i_graphml_sax_handler_start_document) : trie should note keys

2006-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_lgl) : read isolates correctly

2006-08-11  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.[ch] : fixed Python interface
	* configure.in, interfaces/python/Makefile.am : better installation
	in Mac OS X (now works with Fink's Python installation as well)
	
2006-08-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* configure.in : modified to generate a proper makefile for
 	Intel-based Macs.
 	* interfaces/python/*.c : removed some unused variables